add service methods to endpoint

--- a/AngularHeroApp/src/app/Heroes/dashboard/dashboard.component.html
+++ b/AngularHeroApp/src/app/Heroes/dashboard/dashboard.component.html
@@ -4,5 +4,9 @@
         {{hero.name}}
     </a>
 </div>
-
+<div class = "cities-list">
+    <a *ngFor="let city of cities" routerLink="/detail/{{city.id}}">
+        {{city.cityName}}
+    </a>
+</div>
 <app-hero-search></app-hero-search>
